home page - responsive

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -148,10 +148,17 @@ img {
 
 /*CLI*/
 
+.cli .grid {
+  overflow: visible;
+}
+/**added*/
+
 .cli img {
   width: 500px;
 }
-
+.cli h3 {
+  text-align: center;
+}
 .cli .grid {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -165,4 +172,79 @@ img {
 /*Careers*/
 .careers .grid {
   grid-template-columns: 4fr 3fr;
+}
+
+/* Industires*/
+.industries .flex {
+  flex-wrap: wrap;
+}
+
+.industries .card {
+  text-align: center;
+  margin: 18px 10px 40px;
+  width: 600px;
+  transition: transform 0.2s ease-in;
+}
+
+.industries .card h4 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.industries .card:hover {
+  transform: translateY(-15px);
+}
+
+/*footer*/
+.footer .social a {
+  margin: 0 10px;
+}
+
+/*Tablet and under*/
+@media (max-width: 768px) {
+  .grid,
+  .showcase .grid,
+  .stats .grid,
+  .cli .grid,
+  .careers .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .showcase {
+    height: auto;
+  }
+
+  .showcase text {
+    text-align: center;
+    margin-top: 40px;
+  }
+  .showcase-form {
+    justify-self: center;
+    margin: auto;
+  }
+
+  .cli.grid > *:first-child {
+    grid-column: 1;
+    grid-row: 1;
+  }
+}
+
+/*Mobile*/
+@media (max-width: 500px) {
+  .navbar {
+    height: 110px;
+  }
+  .navbar .flex {
+    flex-direction: column;
+  }
+  .navbar ul {
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  .stats .grid-card {
+    justify-self: center;
+    width: 400px;
+  }
 }
