--- a/Styles/utilities.css
+++ b/Styles/utilities.css
@@ -58,6 +58,15 @@
   color: #fff;
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a {
+  color: #fff;
+}
+
 /*Text Sizes*/
 .lead {
   font-size: 20px;
