--- a/Styles/style.css
+++ b/Styles/style.css
@@ -154,7 +154,7 @@ img {
 /**added*/
 
 .cli img {
-  width: 500px;
+  width: 400px;
 }
 .cli h3 {
   text-align: center;
@@ -195,6 +195,36 @@ img {
   transform: translateY(-15px);
 }
 
+/* Services - F*/
+.services-head img {
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.services-sub-head img {
+  width: 300px;
+  justify-self: flex-end;
+}
+
+.services-main .card > i {
+  margin-right: 20px;
+}
+
+.services-main .grid {
+  padding: 30px;
+}
+
+.services-main .grid > *:first-child {
+  grid-column: 1 / span 4;
+}
+
+.services-main .grid > *:nth-child(2) {
+  grid-column: 1 / span 3;
+}
+
+.services-main .grid > *:last-child {
+  grid-column: 1 / span 4;
+}
 /*footer*/
 .footer .social a {
   margin: 0 10px;
@@ -246,5 +276,10 @@ img {
   .stats .grid-card {
     justify-self: center;
     width: 400px;
+  }
+
+  .industries .card {
+    justify-self: center;
+    transition: transform 0.2s ease-in;
   }
 }
